use a single ObjectMapper generating preview rows in a separate thread